--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-# Your requirements go here
+art==5.6
+cachetools==5.0.0
+google-api-core==2.7.2
+google-api-python-client==2.45.0
+google-auth==2.6.5
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.1
+googleapis-common-protos==1.56.0
+httplib2==0.20.4
+oauth2client==4.1.3
+oauthlib==3.2.0
+protobuf==3.20.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+requests-oauthlib==1.3.1
+rsa==4.8
+uritemplate==4.1.1
