--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 art==5.6
 cachetools==5.0.0
+dnspython==2.2.1
+email-validator==1.2.0
 google-api-core==2.7.2
 google-api-python-client==2.45.0
 google-auth==2.6.5
